2008-01-11  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (struct output)buffer): Add labelbuf, labelbufsize,
	symaddr_use, and symaddr fields.
	(i386_disasm): Remove labelbuf and labelbufsize variables.
	Add back %e format.  Implement %a and %l formats.
	* i386_data.h (general_mod$r_m): Set symaddr_use and symaddr for %rip
	base addressing.

	* i386_disasm.c (i386_disasm): Resize output buffer if necessary.
	Optimize output_data initialization.  Free buffers before return.
	(struct output_data): Remove op1str field.  Adjust code.
	(i386_disasm): Store final NUL btye at end of functions.

2008-01-10  Ulrich Drepper  <drepper@redhat.com>

	* i386_data.h (FCT_crdb): New function.
	(FCT_ccc): Use FCT_crdb.
	(FCT_ddd): Likewise.

	* defs/i386: Fix a few instructions with immediate arguments.

	* i386_disasm.c: Rewrite interface to callback functions for operands
	to take a single pointer to a structure.
	* i386_data.h: Adjust all functions.

2008-01-08  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am: Enable x86-64 again.
	* defs/i386: Lots of changes for x86-64.
	* i386_data.h: Add support for use in x86-64 disassembler.
	* i386_disasm.c: Likewise.
	* i386_parse.y: Likewise.
	* defs/x86_64: Removed.

2008-01-04  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Cleanups, remove masks which are not needed.
	Add remaining Intel opcodes.
	* i386_data.h (FCT_imm8): Check for input buffer overrun.
	* i386_disasm.c (i386_disasm): Likewise.
	* i386_parse.y: Remove suffixes which are not needed anymore.

2008-01-03  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: Add yet more SSE instructions.

2008-01-02  Ulrich Drepper  <drepper@redhat.com>

	* i386_disasm.c (i386_disasm): Extend matcher to allow tables to
	contain instructions with prefixes.
	* defs/i386: Use for many SSE operations.
	* i386_data.h (FCT_mmxreg2): Removed.

2008-01-01  Ulrich Drepper  <drepper@redhat.com>

	* defs/i386: More 0f prefix support.
	* i386_data.h (FCT_mmxreg): Implement.